fix / mobile scrolling - grid was conflicting with pages layers, both had a `zIndex` of 1 thus   grid was getting on top for the touch event - we do need the zIndex on both layers though, so I keep them, however   the zIndex for the grid now became dynamic, so its default is now 0   and 1 on active, we cannot apply `display{block,none}` to solve this   issue because we need the element to be visible to keep its dimensions   but `non-visible` for the user until she activate it.   `visibility:{visible,hidden}` did work for desktop but no for mobile,   that's why I am struggling with the zIndex

--- a/public/css/ui/grid.less
+++ b/public/css/ui/grid.less
@@ -1,5 +1,5 @@
 .grid {
-  z-index: 1;
+  z-index: 0;
   left: 0;
   top: 0;
   bottom: 0;
@@ -9,6 +9,7 @@
   visibility: hidden;
 
   &.active {
+    z-index: 1;
     opacity: 1;
     visibility: visible;
   }
